fix: blog page styles shift after attio design implementation

--- a/src/app/style/globals.css
+++ b/src/app/style/globals.css
@@ -537,11 +537,11 @@
     --color-a-link-hover: rgb(141, 69, 246);
     --color-a-link-active: rgb(76, 22, 175);
 
-    --color-a-bg-header: rgb(255, 255, 255);
+    --color-a-bg-header: rgb(250, 250, 250);
     --color-a-bg-website: #ffffff;
-    --color-a-bg-cold: rgb(250, 250, 250);
-    --color-a-bg-warm: rgb(249, 249, 249);
-    --color-a-bg-accent: rgb(249, 250, 251);
+    --color-a-bg-cold: rgb(250, 249, 252);
+    --color-a-bg-warm: rgb(248, 244, 242);
+    --color-a-bg-accent: rgb(25, 25, 25);
 
     /* Font Sizes (Tailwind v4) */
     --font-size-xs: var(--text-xs);
